--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,36 +5,33 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       
-      - name: Setup Pages
+      - name: Setup Pages (with auto-enable)
         uses: actions/configure-pages@v4
-        continue-on-error: true  # Continue even if this fails
+        with:
+          enablement: true
+          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
           path: '.'
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
